# Multi-Agent-Anomaly-Detection

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
data/processed_clean/: X_test.npy  X_train.npy  scaler.json  y_test.npy  y_train.npy
docker/: Dockerfile.producer
docs/: design.md
notebooks/: 01_explore.py
src/agents/: graph.py  mcp_alert_server.py  test_mcp_client.py
src/data/: preprocess.py  preprocess_clean.py
src/model/: _smoke_test.py  evaluate.py  experiment_seeds.py  experiment_threshold.py  experiment_validation.py  experiment_window.py  seed.py  train.py  train_eval_clean.py  train_final.py  transformer.py
src/orchestration/: definitions.py
src/streaming/: consumer.py  measure_latency.py  measure_throughput.py  measure_throughput_batched.py  producer.py
