[project]
name = "multi-agent-anomaly-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kafka-python-ng>=2.2.3",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "torch>=2.12.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=9.1.1",
    "ruff>=0.15.19",
]

[tool.ruff]
line-length = 100
